@@ -1,3 +1,10 @@
+20070917
+ - (djm) OpenBSD CVS Sync
+   - djm@cvs.openbsd.org 2007/08/23 02:49:43
+     [auth-passwd.c auth.c session.c]
+     unifdef HAVE_LOGIN_CAP; ok deraadt@ millert@
+     NB. RCS ID sync only for portable
+
 20070914
  - (dtucker) [openbsd-compat/bsd-asprintf.c] Plug mem leak in error path.
    Patch from Jan.Pechanec at sun com.
@@ -3194,4 +3201,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4742 2007/09/14 00:04:15 dtucker Exp $
+$Id: ChangeLog,v 1.4743 2007/09/17 01:52:59 djm Exp $
